--- a/AttendenceSystem/appsettings.json
+++ b/AttendenceSystem/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Server=(localdb)\\mssqllocaldb;Database=aspnet-AttendenceSystem-3221109c-6686-4e8d-b188-97fe725edc50;Trusted_Connection=True;MultipleActiveResultSets=true"
+    "DefaultConnection": "Data Source=AttendenceDB.sqlite"
   },
   "Logging": {
     "LogLevel": {
