feat: add company info management with dynamic UI integration and logo support

--- a/AttendenceSystem/AttendenceSystem.csproj
+++ b/AttendenceSystem/AttendenceSystem.csproj
@@ -17,4 +17,10 @@
     <PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Design" Version="8.0.7" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Content Update="wwwroot\images\elitelogo.png">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
+  </ItemGroup>
+
 </Project>
